--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ author: CollectionBuilder
 # Set the metadata for your collection 
 # This will be the full URL to your CSV file or relative path + filename of CSV in this repository 
 # e.g. relative path "/assets/demo-metadata.csv"
-# e.g. published google sheet "https://docs.google.com/spreadsheets/d/e/2PACX-1vSn7AA-cbsXT3_nNUGftc1ab-CKXOJHMQCIENeR9NHElbyI9_qA99o0-HNZdG04v-M2_N21bUe_krQQ/pub?output=csv"
-# e.g. on GitHub use the raw link "https://raw.githubusercontent.com/CollectionBuilder/collectionbuilder-sample-data/main/psychiana_cbdemo_gh.csv"
+# e.g. published google sheet "https://docs.google.com/spreadsheets/d/e/2PACX-1vS7YAdb59I6kYMONvnZWplIHKXUNw_4ByKkJdNnruVuAFnBn7y0MhfJH08C5mbFME13dg_3a_-e7ZW0/pub?output=csv"
+# e.g. on GitHub use the raw link "https://docs.google.com/spreadsheets/d/e/2PACX-1vS7YAdb59I6kYMONvnZWplIHKXUNw_4ByKkJdNnruVuAFnBn7y0MhfJH08C5mbFME13dg_3a_-e7ZW0/pub?output=csv"
 metadata-csv: 
 
 ##########
